infra/web-blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-blue-svc
  namespace: my-web
spec:
  selector:
    app: web-blue
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
