infra/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web
  namespace: my-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: web-blue-svc
                port:
                  number: 80
          - path: /yellow
            pathType: Prefix
            backend:
              service:
                name: web-yellow-svc
                port:
                  number: 80
